<resources>
    <string name="ui_test">123</string>
    <string name="app_name">萌猪</string>
    <string name="title_statistics">统计</string>
    <string name="title_detail">账务详情</string>
    <string name="action_settings">Settings</string>
    <string name="current_month_income">本月收入</string>
    <string name="current_month_pay">本月支出</string>
    <string name="current_week_income">本周收入</string>
    <string name="current_week_pay">本周支出</string>
    <string name="month">月</string>
    <string name="week">周</string>
    <string name="request_wrong">请求错误</string>
    <string name="finance_num">金额</string>
    <string name="finance_num_default">0.00</string>
    <string name="finance_category">类别</string>
    <string name="finance_desc">描述</string>
    <string name="finance_desc_default">中餐</string>
    <string name="finance_date">日期</string>
    <string name="finance_pay_location">扣款</string>
    <string name="finance_income_location">收款</string>
    <string name="save">保存</string>
    <string name="menu_funds">资金项</string>
    <string name="menu_category">类别项</string>
    <string name="menu_person">借/收款人</string>
    <string name="menu_about">关于</string>
    <string name="add_funds">添加资金项</string>
    <string name="add_funds_title">请输入新的资金项名</string>
    <string name="add_funds_money">请输入资金项的金额</string>
    <string name="modify_funds_title">请输入修改的资金项名</string>
    <string name="add_category">添加类别项</string>
    <string name="add_category_title">请输入新的类别项</string>
    <string name="modify_category_title">请输入修改的类别项</string>
    <string name="add_person">添加借贷人</string>
    <string name="add_person_title">请输入新的借贷人名</string>
    <string name="modify_person_title">请输入修改的借贷人名</string>
    <string name="cancel">取消</string>
    <string name="determine">确定</string>
    <string name="income">收入项</string>
    <string name="pay">支出项</string>
    <string name="relation_person">关系人</string>
    <string name="author">Andy Clanguage</string>you
    <string name="github">https://github.com/Andy-Home</string>
    <string name="blog">http://blog.csdn.net/u011434547</string>
    <string name="left_to_right">---&gt;</string>
    <string name="right_to_left">&lt;---</string>
    <string name="statistics">统计</string>
    <string name="home">首页</string>
    <string name="detail">详情</string>
    <string name="you_are_not_save_record">您还没有记录账务</string>
</resources>
