<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/golden" />

    <RelativeLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="180dp"
            android:gravity="center"
            android:id="@+id/author"
            android:textSize="@dimen/add_record_text_size"
            android:text="@string/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_margin="8dp"
            android:gravity="center"
            android:id="@+id/github"
            android:layout_below="@id/author"
            android:textSize="@dimen/add_record_text_size"
            android:text="@string/github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_margin="8dp"
            android:gravity="center"
            android:layout_below="@id/github"
            android:id="@+id/blog"
            android:textSize="@dimen/add_record_text_size"
            android:text="@string/blog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</LinearLayout>