<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="365dp"
    android:layout_height="match_parent"
    android:background="@color/golden"
    android:orientation="vertical">

    <!-- 头像 -->
    <com.andy.mengzhu.ui.component.CircleImage
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:src="@drawable/head" />

    <!-- 分隔线 -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/balance"
        android:src="@drawable/line_gray" />

    <RelativeLayout
        android:id="@+id/menu_funds"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/menu_funds"
            android:gravity="center"
            android:textSize="@dimen/add_record_text_size"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <!-- 分隔线 -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/balance"
        android:src="@drawable/line_gray" />

    <RelativeLayout
        android:id="@+id/menu_category"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/menu_category"
            android:gravity="center"
            android:textSize="@dimen/add_record_text_size"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <!-- 分隔线 -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/balance"
        android:src="@drawable/line_gray" />

    <RelativeLayout
        android:id="@+id/menu_about"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/menu_about"
            android:gravity="center"
            android:textSize="@dimen/add_record_text_size"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <!-- 分隔线 -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/balance"
        android:src="@drawable/line_gray" />

</LinearLayout>